style(tokenSelector) fix bug z-index to choice token

--- a/packages/ui/src/styles/TokenSelector.module.css
+++ b/packages/ui/src/styles/TokenSelector.module.css
@@ -97,7 +97,7 @@
     background-color: var(--bg-dark);
     border: 0.1vh solid var(--border-grey);
     border-radius: 3vh;
-    z-index: 10;
+    z-index: 1000000;
     margin-top: 5px;
     opacity: 0;
     animation: dropdownSlide 0.3s forwards;
